force-app/main/default/objects/GEO_Factor__c/GEO_Factor__c.object-meta.xml
<CustomObject>
    <label>GEO Factor</label>
    <nameField>
        <label>GEO Factor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEO Factors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>