force-app/main/default/objects/GEO_Factor__c/fields/Appellate_District__c.field-meta.xml
<CustomField>
    <fullName>Appellate_District__c</fullName>
    <formula>County__r.Appellate_District__c</formula>
    <label>Appellate District</label>
    <type>Text</type>
</CustomField>