force-app/main/default/objects/GEO_Factor__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipLabel>GEO Factors</relationshipLabel>
    <relationshipName>GEO_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>