force-app/main/default/objects/GEO_Factor__c/fields/GEO_External_ID__c.field-meta.xml
<CustomField>
    <fullName>GEO_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>GEO External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>