force-app/main/default/objects/GEO_Factor__c/fields/Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Code__c</fullName>
    <formula>County__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Code</label>
    <type>Text</type>
</CustomField>