force-app/main/default/objects/GEO_Factor__c/fields/Region_Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Region_Factor_Value__c</fullName>
    <label>Geo Factor Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>